--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Заголовок</title>
+	<title>Optima</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
@@ -348,21 +348,21 @@
 						<div class="content_item">
 							<div class="cont_img"><a href="#"><img src="img/item_cont_1.png"></a></div>
 							<h3>супер услуга</h3>
-							<p>Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить</p>
+							<p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 							<div class="content_item">
 								<div class="cont_img"><a href="#"><img src="img/item_cont_2.png"></a></div>
 								<h3>супер услуга</h3>
-								<p>Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить</p>
+								<p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires.</p>
 							</div>
 					</div>
 					<div class="col-md-4">
 							<div class="content_item">
 								<div class="cont_img"><a href="#"><img src="img/item_cont_3.png"></a></div>
 								<h3>супер услуга</h3>
-								<p>Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить</p>
+								<p> To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that.</p>
 							</div>
 					</div>
 				</div>
@@ -379,7 +379,7 @@
 						<div class="left_comp">
 							<h3>Компания <<оптима>></h3>
 							<div class="comp_img"><a href="#"><img src="img/left_comp.png"></a></div>
-							<p>Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить свой текст. Это текст. Кликните дважды, что бы отредактировать его и добавить</p>
+							<p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain.</p>
 						</div>
 					</div>
 					<div class="col-md-2 col-sm-3 col-xs-4">
