--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<form novalidate action="http://formspree.io/2andu@mail.ru" class="main_form" novalidate target="_blank" method="post">
+						<form action="http://formspree.io/2andu@mail.ru" class="main_form" method="POST">
 							<label class="form-group">
 								<span class="color_element">Your Name:</span> 
 								<input type="text" name="name" placeholder="Your Name" data-validation-required-message="You have not entered a name" required />
@@ -492,7 +492,7 @@
 						<div class="col-md-6">
 							<div class="join_uor">
 								<h4>Join our newsletter</h4>
-									<form novalidate action="http://formspree.io/2andu@mail.ru" class="email_form" novalidate target="_blank" method="POST">
+									<form action="http://formspree.io/2andu@mail.ru" class="email_form" method="POST">
 										<label class="email-group">
 											<input type="email" name="email" placeholder="Enter your e-mail address" data-validation-required-message="You have not entered email" required />
 											<span class="help-block text-danger"></span>
