--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<form action="http://formspree.io/2andu@mail.ru" class="main_form" method="POST">
+						<form action="http://formspree.io/2andu@gmail.com" class="main_form" method="POST">
 							<label class="form-group">
 								<span class="color_element">Your Name:</span> 
 								<input type="text" name="name" placeholder="Your Name" data-validation-required-message="You have not entered a name" required />
