--- a/index.html
+++ b/index.html
@@ -488,31 +488,28 @@
   <section id="news_about" class="about_news">
   	<div class="content">
 				<div class="row">
-
-						<div class="col-md-6">
-							<div class="join_uor">
-								<h4>Join our newsletter</h4>
-									<form action="http://formspree.io/2andu@mail.ru" class="email_form" method="POST">
-										<label class="email-group">
-											<input type="email" name="email" placeholder="Enter your e-mail address" data-validation-required-message="You have not entered email" required />
-											<span class="help-block text-danger"></span>
-										</label>
-										<button>Subscribe</button>
-									</form>
-							</div>
+					<div class="col-md-6">
+						<div class="join_uor">
+							<h4>Join our newsletter</h4>
+								<form method="POST" action="https://formspree.io/dyachenkoandrii@gmail.com">
+									<label class="email-group">
+										<input type="email" name="email" placeholder="Enter your e-mail address" data-validation-required-message="You have not entered email" required />
+									</label>
+									<button>Subscribe</button>
+								</form>
 						</div>
-						<div class="col-md-6">
-							<div class="keep_update">
-								<h4>keep update</h4>
-								<ul>
-									<li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-									<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-									<li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
-									<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-								</ul>
-							</div>
+					</div>
+					<div class="col-md-6">
+						<div class="keep_update">
+							<h4>keep update</h4>
+							<ul>
+								<li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+								<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+								<li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
+								<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+							</ul>
 						</div>
-
+					</div>
 				</div>
 			</div>
   </section>
