--- a/index.html
+++ b/index.html
@@ -417,20 +417,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<form method="POST" action="https://formspree.io/dyachenkoandrii@gmail.com">
-							<label class="email-group">
+						<form method="POST" action="https://formspree.io/dyachenkoandrii@gmail.com" class="form-group">
+							<label class="form-group">
 								<span class="color_element">Your Name:</span> 
 								<input type="text" name="name" placeholder="Your Name" data-validation-required-message="You have not entered a name" required /> class="email-group"
 							</label>
-							<label class="email-group">
+							<label class="form-group">
 								<span class="color_element">Your email:</span>
 								<input type="email" name="email" placeholder="Your Email" data-validation-required-message="You have not entered email" required />
 							</label>
-							<label class="email-group">
+							<label class="form-group">
 								<span class="color_element">Subject:</span>
 								<input type="text" name="subject" placeholder="Subject" data-validation-required-message="You have not entered a subject" required />
 							</label>
-							<label class="email-group">
+							<label class="form-group">
 								<span class="color_element">Your message:</span>
 								<textarea name="message" data-validation-required-message="You have not entered a message" required></textarea>
 							</label>
