--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<form method="POST" action="https://formspree.io/dyachenkoandrii@gmail.com" class="form-group">
+						<form method="POST" class="main_form" action="https://formspree.io/dyachenkoandrii@gmail.com">
 							<label class="form-group">
 								<span class="color_element">Your Name:</span> 
-								<input type="text" name="name" placeholder="Your Name" data-validation-required-message="You have not entered a name" required /> class="email-group"
+								<input type="text" name="name" placeholder="Your Name" data-validation-required-message="You have not entered a name" required />
 							</label>
 							<label class="form-group">
 								<span class="color_element">Your email:</span>
